--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -169,7 +169,7 @@
                 }
 
                 node.addEventListener('mount', (e) => {
-                    // console.log(e, options, buttons, inputs);
+                    console.log(e, options, buttons, inputs);
                 });
 
                 node.addEventListener('move', (e) => {
@@ -178,11 +178,11 @@
                 });
 
                 node.addEventListener('resize', (e) => {
-                    // console.log(e)
+                    console.log(e)
                 });
 
                 node.addEventListener('update', (e) => {
-                    // console.log(e)
+                    console.log(e)
                 });
 
                 function scrolling(p) {
