@slidy/core - no need to pass options

--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -137,14 +137,14 @@
                 limit = 16;
 
             let options = {
-                index: 8,
-                length: limit,
-                snap: 'center',
-                loop: false,
-                clamp: false,
-                gravity: 1.2,
-                duration: 375,
-                vertical: false,
+                // index: 8,
+                // length: limit,
+                // snap: 'center',
+                // loop: false,
+                // clamp: false,
+                // gravity: 1.2,
+                // duration: 375,
+                // vertical: false,
             };
 
             const main = document.querySelector('main'),
