--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -139,7 +139,7 @@
             let options = {
                 index: 8,
                 length: limit,
-                snap: 'center',
+                // snap: 'center',
                 loop: false,
                 clamp: false,
                 gravity: 1.2,
